--- a/server/lib/templates/Vagrantfile.erb
+++ b/server/lib/templates/Vagrantfile.erb
@@ -1,6 +1,16 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 
+$script = <<SCRIPT
+  if [[ $(ip link show <%= nic %>> /dev/null 2>&1) -eq 0 ]]; then
+    sudo echo -e "\\n\\nauto <%= nic %> \\niface <%= nic %> inet static\\naddress <%= ip %> \\nnetmask 255.255.255.0\\ngateway <%= gateway %>" >> /etc/network/interfaces
+    sudo ifup <%= nic %> >/dev/null 2>&1
+    sudo ifconfig <%= nic %> up
+    sudo route del default eth0
+    sudo route add default netmask 0.0.0.0 gw <%= gateway %> dev <%= nic %> 
+  fi
+SCRIPT
+
 Vagrant.configure("2") do |config|
   config.vm.box = "<%= box_name %>"
   config.vm.network :public_network, :bridge => "<%= bridge %>", :auto_config => false
@@ -12,4 +22,7 @@ Vagrant.configure("2") do |config|
     vb.name = "<%= app_name %>"
   end
   config.ssh.username = "<%= user %>"
+  config.vm.provision :shell, inline: $script
+  config.vm.provision :shell, inline: "sudo route del default eth0"
+  config.vm.provision :shell, inline: "ping <%= gateway %> -c 1 >/dev/null 2>&1"
 end
