--- a/server/app/views/home/index.html.erb
+++ b/server/app/views/home/index.html.erb
@@ -1,2 +1,19 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<div class="welcome">
+  <h2>Welcome to Diors Cloud</h2>
+  <ol class="steps">
+    <li>
+      First, download and install a client for google talk.
+      <ul>
+        <li><a href="http://adium.im/" target="_blank">Adium for Mac OS X</a></li>
+        <li><a href="http://www.pidgin.im/" target="_blank">Pidgin for Linux</a></li>
+        <li><a href="http://www.google.com/talk/" target="_blank">GTalk for Windows</a></li>
+      </ul>
+    </li>
+    <li>Add account `diors@dianping.com`.</li>
+    <li>Type the command `diors init &lt;app_name&gt;` to initialize an app.</li>
+    <li>Type the command `diors app &lt;app_name&gt; up` to start your server.</li>
+    <li>Type the command `diors app &lt;app_name&gt; bindkey '&lt;ssh_public_key&gt;'` to add your key to server.</li>
+    <li>Use your favorite ssh client to login to your server.</li>
+    <li>Type the command `diors help` to check more commands.</li>
+  </ol>
+  <div>
